--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "npm-run-all lint test:format",
     "test:format": "yarn run prettier --check",
     "tsc": "tsc",
+    "commit": "git-cz",
     "prepack": "tsc",
     "tsc:watch": "tsc --watch"
   },
@@ -41,6 +42,7 @@
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
+    "git-cz": "^4.6.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
